force-app/main/default/objects/PM_Configure__c/PM_Configure__c.object-meta.xml
<CustomObject>
    <label>PM Configure</label>
    <nameField>
        <displayFormat>PM - {000000}</displayFormat>
        <label>PM Configure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Configure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>