force-app/main/default/objects/PM_Configure__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>long text</fullName>
            </value>
            <value>
                <fullName>textarea long</fullName>
            </value>
            <value>
                <fullName>Rich text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>