force-app/main/default/objects/PM_Configure__c/fields/Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Answer_Value__c</fullName>
    <label>Answer Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>