force-app/main/default/objects/PM_Configure__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KRA</fullName>
                <default>true</default>
                <label>KRA</label>
            </value>
            <value>
                <fullName>Annual Award Result</fullName>
            </value>
            <value>
                <fullName>Annual Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>