force-app/main/default/objects/PM_Configure__c/fields/Consider_Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>Consider_Feedback_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Feedback Rating</label>
    <type>Checkbox</type>
</CustomField>