force-app/main/default/objects/PM_Configure__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Year</label>
    <referenceTo>Fiscal_Year__c</referenceTo>
    <relationshipLabel>PM Configure</relationshipLabel>
    <relationshipName>PM_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>