force-app/main/default/objects/PM_Configure__c/fields/KRA__c.field-meta.xml
<CustomField>
    <fullName>KRA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KRA</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>PM Configure</relationshipLabel>
    <relationshipName>PM_Answer_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>