force-app/main/default/objects/PM_Configure__c/fields/KRA_Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>KRA_Quarter_Name__c</fullName>
    <description>Store the related KRA (Goal) records name</description>
    <formula>KRA__r.Goal_Name__c</formula>
    <label>KRA Quarter Name</label>
    <type>Text</type>
</CustomField>