force-app/main/default/objects/PM_Configure__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PM Configure (Mentee)</relationshipLabel>
    <relationshipName>PM_Configure1</relationshipName>
    <type>Lookup</type>
</CustomField>