force-app/main/default/objects/PM_Configure__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PM Configure (Mentor)</relationshipLabel>
    <relationshipName>PM_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>