force-app/main/default/objects/PM_Configure__c/fields/Mentor_Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor/Mentee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PM Answer Configures (Mentor/Mentee)</relationshipLabel>
    <relationshipName>PM_Answer_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>