force-app/main/default/objects/PM_Configure__c/fields/Not_Consider_Feedback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Consider_Feedback_Reason__c</fullName>
    <label>Reason for Exclusion</label>
    <type>TextArea</type>
</CustomField>