force-app/main/default/objects/PM_Configure__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>PM Answer Configures</relationshipLabel>
    <relationshipName>PM_Answer_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>