force-app/main/default/objects/PM_Configure__c/fields/Question_overview__c.field-meta.xml
<CustomField>
    <fullName>Question_overview__c</fullName>
    <label>Question overview</label>
    <type>TextArea</type>
</CustomField>