force-app/main/default/objects/PM_Configure__c/fields/Rating_overview__c.field-meta.xml
<CustomField>
    <fullName>Rating_overview__c</fullName>
    <label>Rating overview</label>
    <type>TextArea</type>
</CustomField>