force-app/main/default/objects/PM_Configure__c/fields/Recall_FeedBack_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recall_FeedBack_Comments__c</fullName>
    <label>Recall FeedBack Comments</label>
    <type>TextArea</type>
</CustomField>