force-app/main/default/objects/PM_Configure__c/fields/Rejection_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Cancellation_Reason__c</fullName>
    <label>Rejection/Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>