force-app/main/default/objects/PM_Configure__c/fields/Related_Question__c.field-meta.xml
<CustomField>
    <fullName>Related_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Question</label>
    <referenceTo>PM_Configure__c</referenceTo>
    <relationshipLabel>PM Ans Configure</relationshipLabel>
    <relationshipName>PM_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>