force-app/main/default/objects/PM_Configure__c/fields/Reporting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PM Configure (Reporting Contact)</relationshipLabel>
    <relationshipName>PM_Configures1</relationshipName>
    <type>Lookup</type>
</CustomField>