force-app/main/default/objects/PM_Configure__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <referenceTo>Resource_Role__c</referenceTo>
    <relationshipLabel>PM Configure</relationshipLabel>
    <relationshipName>PM_Configure</relationshipName>
    <type>Lookup</type>
</CustomField>