force-app/main/default/objects/PM_Configure__c/recordTypes/Answer.recordType-meta.xml
<RecordType>
    <fullName>Answer</fullName>
    <active>true</active>
    <label>Answer</label>
</RecordType>