force-app/main/default/objects/PM_Configure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Question__c</columns>
    <columns>Resource_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>