force-app/main/default/objects/PM_Configure__c/listViews/All_Question.listView-meta.xml
<ListView>
    <fullName>All_Question</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PM_Configure__c.Question</value>
    </filters>
    <label>All Question</label>
</ListView>