force-app/main/default/objects/PM_Configure__c/listViews/Reporting_Answers.listView-meta.xml
<ListView>
    <fullName>Reporting_Answers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PM_Configure__c.Answer</value>
    </filters>
    <filters>
        <field>Reporting_Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Reporting Answers</label>
</ListView>